--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,61 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  padding: 60px;
+  font-size: 1rem;
+  background: rgb(46,26,59);
+background: linear-gradient(90deg, rgba(46,26,59,1) 14%, rgba(29,165,253,1) 50%, rgba(88,35,122,1) 85%);
+}
+h2{
+  text-align: center;
+  font-size: 3rem;
+  
+}
+input{
+  outline: none;
+  width: 60%;
+  border-radius: 5px;
+  margin-left: 20%;
+  font-size: 1.2rem;
+  height: 3rem;
+  color:rgb(0, 0, 0);
+  padding: 5px;
+  
+}
+h3{
+color:whitesmoke;
+ font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+ font-size: 2rem;
+}
+
+
+
+.card{
+  align-content: center;
+  border:1px solid gray;
+  border-radius: 5px;
+  overflow: hidden;
+  min-width: 22em;
+  margin-bottom: 2em;
+ display: flex;
+ flex-direction: column;
+ background-color: white;
+ color:black
+ 
+}
+.card p{
+  padding: 5px;
+  text-align: center;
+}
+.card img{
+  max-height: 170px;
+}
+
+.card-grid{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content:space-between
 }
