--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ background: linear-gradient(90deg, rgba(46,26,59,1) 14%, rgba(29,165,253,1) 50%,
 }
 h2{
   text-align: center;
-  font-size: 3rem;
+  font-size: 3em;
   
 }
 input{
@@ -38,6 +38,7 @@ color:whitesmoke;
   border-radius: 5px;
   overflow: hidden;
   min-width: 22em;
+  max-width: 22em;
   margin-bottom: 2em;
  display: flex;
  flex-direction: column;
@@ -58,4 +59,34 @@ color:whitesmoke;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content:space-between
+}
+
+@media (max-width: 700px) { 
+   input{
+     width:97%;
+     margin: 0;
+    
+   }
+   h2{
+    font-size: 2.5em;
+   }
+   .card-grid{
+    min-width: 100%;
+     align-content: center;
+     justify-content: center;
+     width: 100%;
+   }
+   .card{
+     width:  50em;
+   }
+  
+  
+  
+}
+
+@media (max-width: 400px) {
+  h2{
+    font-size: 2rem;
+   }
+
 }
